crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__aggregation__aggregate_count_artist_albums.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Accept",
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        }
      },
      {
        "Name": "Aerosmith",
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        }
      },
      {
        "Name": "Alanis Morissette",
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        }
      },
      {
        "Name": "Alice In Chains",
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        }
      },
      {
        "Name": "Antônio Carlos Jobim",
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        }
      }
    ]
  }
]
