crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__aggregation__aggregate_max_enum.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "aggregates": {
      "max_suit": "spades"
    }
  }
]
